fix: increase z-index for the zoom overlay

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -31,9 +31,14 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
+.medium-zoom-image--opened,
+.medium-zoom-overlay {
+  z-index: 300 !important;
+}
+
 @media screen and (min-width: 1367px) {
   .medium-zoom-image--opened[alt="max-zoom"] {
-    width: 95% !important;
+    width: 93% !important;
     height: auto !important;
     left: 45px !important;
     max-width: 1808px !important;
